Change in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
 <body>
   <app-root></app-root>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCsj93JjMUzgOcM5K_b99lGFo27RV2G_CA">
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY">
   </script>
 
 </body>
